[Fixup] overlap position in global-footer, enable global-navbar animation

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -9,6 +9,7 @@
 }
 
 #contents {
+  min-height: 100%;
   padding-top: 20px;
   padding-bottom: 50px;
   background-color: #fbfbfb;
