--- a/styles/components/documents/document-single-item.scss
+++ b/styles/components/documents/document-single-item.scss
@@ -17,7 +17,6 @@
     time {
       color: #666;
       font-weight: 300;
-      text-transform: uppercase;
     }
 
     .tags {
@@ -44,15 +43,16 @@
 
     .hgroup {
       .title {
-        margin-bottom: 5px;
         font-size: 28px;
         font-weight: 600;
         font-family: 'Open Sans', 'KoPub Batang', sans-serif;
       }
 
       .subtitle {
+        margin-top: 5px;
+        color: #a3a3a3;
         font-size: 18px;
-        font-weight: 400;
+        font-weight: 300;
       }
     }
   }
