--- a/styles/components/global-navbar.scss
+++ b/styles/components/global-navbar.scss
@@ -22,7 +22,7 @@
 
     @include respond-to(xs) {
       padding: 22px 0;
-      @include transition(0.2s top padding);
+      @include transition(0.2s top, 0.2s padding);
     }
   }
 
