--- a/styles/containers/home.scss
+++ b/styles/containers/home.scss
@@ -22,6 +22,7 @@
 
   #contents {
     padding: 0;
+    height: 100%;
     background-color: transparent;
   }
 
