--- a/styles/reset.scss
+++ b/styles/reset.scss
@@ -1,6 +1,6 @@
 @import 'bourbon';
 
-html, body, main, #app, .react-container, #contents {
+html, body, main, #app, .react-container {
   height: 100%;
   font-family: 'Open Sans', 'Noto Sans KR', sans-serif;
   background-color: transparent;
